--- a/main.html
+++ b/main.html
@@ -6,11 +6,20 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color:yellow;text-align:center;">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div>
+	<h1 id="f1">Flower Photos
+	<p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaa aaaaa</p>
+	</h1>
+</div>
+	<div>
+		<h1 id="f2">Roses picture
+		<p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaa aaaaa</p>
+		</h1>
+	</div>
 </body>
 
 </html>
